deployment-blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: dockerhub-key
      containers:
        - name: blog
          image: jssoriao/blog
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: blog-service
#   namespace: blog
# spec:
#   selector:
#     app: blog
#   type: LoadBalancer
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 80
#       nodePort: 30000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: blog-service
#   namespace: blog
# spec:
#   selector:
#     app: blog
#   type: NodePort
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 80
#       nodePort: 30000
